# DesignPatterns

./: .gitignore  README.md
BehavioralDesignPatterns/ChainOfResponsability/: ChainOfResponsabilityArch.drawio  README.md
BehavioralDesignPatterns/ChainOfResponsability/include/: AbstractHandler.hpp  DogHandler.hpp  IHandler.hpp  MonkeyHandler.hpp  SquirrelHandler.hpp
BehavioralDesignPatterns/ChainOfResponsability/src/: AbstractHandler.cpp  DogHandler.cpp  MonkeyHandler.cpp  SquirrelHandler.cpp  main.cpp
CreationalDesignPatterns/FactoryMethod/: FactoryMethodArch.drawio  README.md
CreationalDesignPatterns/FactoryMethod/config_files/debug/: CMakeLists.txt
CreationalDesignPatterns/FactoryMethod/config_files/release/: CMakeLists.txt
CreationalDesignPatterns/FactoryMethod/include/: ConcreteCreatorA.hpp  ConcreteCreatorB.hpp  ConcreteProductA.hpp  ConcreteProductB.hpp  Creator.hpp  IProduct.hpp
CreationalDesignPatterns/FactoryMethod/src/: ConcreteCreatorA.cpp  ConcreteCreatorB.cpp  ConcreteProductA.cpp  ConcreteProductB.cpp  Creator.cpp  main.cpp
StructuralDesignPatterns/Adapter/: AdapterArch.drawio  README.md  set_up.sh
StructuralDesignPatterns/Adapter/include/: RoundHole.hpp  RoundPeg.hpp  SquarePeg.hpp  SquarePegRoundPegAdapter.hpp
StructuralDesignPatterns/Adapter/src/: RoundHole.cpp  RoundPeg.cpp  SquarePeg.cpp  SquarePegRoundPegAdapter.cpp  main.cpp
